<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_id"/>

    <EditText
        android:id="@+id/etId"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:hint="@string/text_id"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_float"/>

    <EditText
        android:id="@+id/etFloat"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_float"
        android:inputType="numberSigned|numberDecimal"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"/>

    <EditText
        android:id="@+id/etText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/text"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_button"/>

    <Button
        android:id="@+id/btnSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_button"/>

    <Button
        android:id="@+id/btnSelectRaw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_raw_button"/>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_button"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_button"/>

</LinearLayout>